# bookscrape

./: .coveragerc  .travis.yml  LICENCE  MANIFEST.in  README.md  requirements-test.txt  requirements.txt  scrapy.cfg  setup.cfg  setup.py
bookscrape/: __init__.py  command_line.py  exceptions.py  loggers.py
bookscrape/crawl/: exporters.py  items.py  pipelines.py  settings.py
bookscrape/crawl/spiders/: bases.py  kissmanga.py  kissmanga_readcomics_base.py  readcomiconline.py
pybook/: __init__.py  command_line.py
pybook/crawl/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
requirements/: requirements-test.txt  requirements.txt
tests/: test_command_line.py  test_exporters.py  test_pipelines.py
