[metadata]
name = bookscrape
version = 0.0.1dev10
url = https://github.com/clemfromspace/bookscrape
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrape and build e-books from various websites
long_description = file:README.md

[options]
include_package_data = true

[options.entry_points]
console_scripts =
    bookscrape = bookscrape.command_line:main
